--- a/donation/templates/donation/requestor.html
+++ b/donation/templates/donation/requestor.html
@@ -1,19 +1,12 @@
-
-{% extends "donation/base.html" %}
-
-{% block content %}
-      
+{% extends "donation/base.html" %} {% block content %}
 
 <div class="container">
-<div class="row">
-   <div class='col text-center'>
-   {{data}}
-      Hello: {{data.created_by.username}}
-   </div>
-</div>
-<div class='row'>
-    <div class='col text-danger'>
-        <pre>
+  <div class="row">
+    <div class="col text-center">Hello: {{data.created_by.username}}</div>
+  </div>
+  <div class="row">
+    <div class="col text-danger">
+      <pre>
             Credentials of the Donor Are:
             Name: {{data.donor.username}}
             Phone: {{data.donor.phone_number}}
@@ -27,8 +20,10 @@
 
             Please get in touch as soon as possible
             🩸🩸🩸Donate Blood... Save Lifes....🩸🩸🩸
-        </pre>
+        </pre
+      >
     </div>
-<div>
+    <div></div>
+    {% endblock %}
+  </div>
 </div>
-{% endblock %}
