email with aws working

--- a/donation/templates/donation/base.html
+++ b/donation/templates/donation/base.html
@@ -9,7 +9,7 @@
     </meta>
   </head>
 <body>
-   <img src ="media/email_picture.jpg" alt="blood_donation_image"></img>
+   <img src ="haemosupport/media/email_picture.jpg" alt="blood_donation_image"></img>
    {% block content %}{% endblock %}
 
 </body>
