password creation functionality added

--- a/accounts/templates/accounts/create_password.html
+++ b/accounts/templates/accounts/create_password.html
@@ -2,10 +2,10 @@
 
 <h3>Hi {{ user }},</h3>
 
-To initiate the password setting process for your account on {{ domain }}, click
-the link below:
+To initiate the password setting process for your account on Haemo Support,
+click the link below:
 <br /><br />
-<a href="http://{{ domain }}/set-password/?uidb64={{uid}}&token={{token}}"
+<a href="http://localhost:3000/set-password/?uidb64={{uid}}&token={{token}}"
   >Reset password</a
 >
 <br /><br />
