date_required related refactoring

--- a/donation/templates/donation/user_reminder.html
+++ b/donation/templates/donation/user_reminder.html
@@ -13,6 +13,7 @@
                 Quantity: {{request.quantity}}
                 Location: {{request.location}}
                 Priority: {{request.priority}}
+                Date Required: {{data.date_required}}
 
             {% empty %}
                 There are no Pending Requests.
