--- a/donation/templates/donation/donor.html
+++ b/donation/templates/donation/donor.html
@@ -17,6 +17,7 @@
             Quantity: {{data.quantity}}
             Priority: {{data.priority}}
             Location: {{data.location}}
+            Date Required: {{data.date_required}}
 
             Please get in touch as soon as possible
             🩸🩸🩸Donate Blood... Save Lifes....🩸🩸🩸
